add domain event
