# docs/swagger.yaml
@@ -606,6 +606,414 @@ paths:
       summary: Retrieves a list of conversations by the user
       tags:
       - Conversations
+  /api/v1/events:
+    get:
+      description: Fetches a paginated list of events based on the provided filter
+        parameters.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successfully retrieved the list of events
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error - An error occurred while processing
+            the request
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Retrieve a list of events
+      tags:
+      - Events
+    post:
+      description: Creates a new event with the provided details.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Event created successfully
+          schema:
+            $ref: '#/definitions/response.Response'
+        "400":
+          description: BadRequest - Invalid input or request data
+          schema:
+            $ref: '#/definitions/response.Response'
+        "401":
+          description: Unauthorized - User not authenticated
+          schema:
+            $ref: '#/definitions/response.Response'
+        "403":
+          description: Forbidden - User does not have the required permissions
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error - An error occurred while processing
+            the request
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Create a new event
+      tags:
+      - Events
+  /api/v1/events/{eventId}:
+    delete:
+      description: Deletes an existing event based on the provided event ID.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Event deleted successfully
+          schema:
+            $ref: '#/definitions/response.Response'
+        "401":
+          description: Unauthorized - User not authenticated
+          schema:
+            $ref: '#/definitions/response.Response'
+        "403":
+          description: Forbidden - User does not have the required permissions
+          schema:
+            $ref: '#/definitions/response.Response'
+        "404":
+          description: Not Found - Event with the specified ID not found
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error - An error occurred while processing
+            the request
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Delete an existing event
+      tags:
+      - Events
+    get:
+      description: Fetches the details of a specific event based on the provided event
+        ID.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successfully retrieved the event
+          schema:
+            $ref: '#/definitions/response.Response'
+        "401":
+          description: Unauthorized - User not authenticated
+          schema:
+            $ref: '#/definitions/response.Response'
+        "403":
+          description: Forbidden - User does not have the required permissions
+          schema:
+            $ref: '#/definitions/response.Response'
+        "404":
+          description: Not Found - Event with the specified ID not found
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error - An error occurred while processing
+            the request
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Retrieve a event by its ID
+      tags:
+      - Events
+    put:
+      description: Updates the details of an existing event based on the provided
+        event ID and update information.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successfully retrieved the event
+          schema:
+            $ref: '#/definitions/response.Response'
+        "401":
+          description: Unauthorized - User not authenticated
+          schema:
+            $ref: '#/definitions/response.Response'
+        "403":
+          description: Forbidden - User does not have the required permissions
+          schema:
+            $ref: '#/definitions/response.Response'
+        "404":
+          description: Not Found - Event with the specified ID not found
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error - An error occurred while processing
+            the request
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Update an existing event
+      tags:
+      - Events
+  /api/v1/events/delete-permanently/{eventId}:
+    delete:
+      description: Permanently deletes an existing event based on the provided event
+        ID.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Event permanently deleted successfully
+          schema:
+            $ref: '#/definitions/response.Response'
+        "401":
+          description: Unauthorized - User not authenticated
+          schema:
+            $ref: '#/definitions/response.Response'
+        "403":
+          description: Forbidden - User does not have the required permissions
+          schema:
+            $ref: '#/definitions/response.Response'
+        "404":
+          description: Not Found - Event with the specified ID not found
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error - An error occurred while processing
+            the request
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Permanently delete an event
+      tags:
+      - Events
+  /api/v1/events/favourite/{eventId}:
+    patch:
+      description: Marks an existing event as a favourite based on the provided event
+        ID.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Event marked as favourite successfully
+          schema:
+            $ref: '#/definitions/response.Response'
+        "400":
+          description: BadRequest - Invalid request data
+          schema:
+            $ref: '#/definitions/response.Response'
+        "401":
+          description: Unauthorized - User not authenticated
+          schema:
+            $ref: '#/definitions/response.Response'
+        "403":
+          description: Forbidden - User does not have the required permissions
+          schema:
+            $ref: '#/definitions/response.Response'
+        "404":
+          description: Not Found - Event with the specified ID not found
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error - An error occurred while processing
+            the request
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Mark anb event as favorite
+      tags:
+      - Events
+  /api/v1/events/get-created-events:
+    get:
+      description: Fetches a paginated list of events created by the user, based on
+        the provided pagination filter.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successfully retrieved events
+          schema:
+            $ref: '#/definitions/response.Response'
+        "401":
+          description: Unauthorized - User not authenticated
+          schema:
+            $ref: '#/definitions/response.Response'
+        "403":
+          description: Forbidden - User does not have the required permissions
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error - An error occurred while processing
+            the request
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Retrieve created events
+      tags:
+      - Events
+  /api/v1/events/get-delete-events:
+    get:
+      description: Fetches a paginated list of events that have been deleted, based
+        on the provided pagination filter.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Event permanently deleted successfully
+          schema:
+            $ref: '#/definitions/response.Response'
+        "401":
+          description: Unauthorized - User not authenticated
+          schema:
+            $ref: '#/definitions/response.Response'
+        "403":
+          description: Forbidden - User does not have the required permissions
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error - An error occurred while processing
+            the request
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Retrieve deleted events
+      tags:
+      - Events
+  /api/v1/events/get-favourite-events:
+    get:
+      description: Fetches a paginated list of events marked as favourites by the
+        user, based on the provided pagination filter.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Event marked as favourite successfully
+          schema:
+            $ref: '#/definitions/response.Response'
+        "400":
+          description: BadRequest - Invalid request data
+          schema:
+            $ref: '#/definitions/response.Response'
+        "401":
+          description: Unauthorized - User not authenticated
+          schema:
+            $ref: '#/definitions/response.Response'
+        "403":
+          description: Forbidden - User does not have the required permissions
+          schema:
+            $ref: '#/definitions/response.Response'
+        "404":
+          description: Not Found - Event with the specified ID not found
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error - An error occurred while processing
+            the request
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Retrieve favourite events
+      tags:
+      - Events
+  /api/v1/events/make-events-private:
+    patch:
+      description: Changes the visibility of specified events to private based on
+        the provided event IDs.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Events marked as private successfully
+          schema:
+            $ref: '#/definitions/response.Response'
+        "401":
+          description: Unauthorized - User not authenticated
+          schema:
+            $ref: '#/definitions/response.Response'
+        "403":
+          description: Forbidden - User does not have the required permissions
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error - An error occurred while processing
+            the request
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Make events private
+      tags:
+      - Events
+  /api/v1/events/make-events-public:
+    patch:
+      description: Changes the visibility of specified events to public based on the
+        provided event IDs.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Events marked as public successfully
+          schema:
+            $ref: '#/definitions/response.Response'
+        "401":
+          description: Unauthorized - User not authenticated
+          schema:
+            $ref: '#/definitions/response.Response'
+        "403":
+          description: Forbidden - User does not have the required permissions
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error - An error occurred while processing
+            the request
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Make events public
+      tags:
+      - Events
+  /api/v1/events/restore:
+    patch:
+      description: Restores a list of deleted events based on the provided event IDs.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Event permanently deleted successfully
+          schema:
+            $ref: '#/definitions/response.Response'
+        "401":
+          description: Unauthorized - User not authenticated
+          schema:
+            $ref: '#/definitions/response.Response'
+        "403":
+          description: Forbidden - User does not have the required permissions
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error - An error occurred while processing
+            the request
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Restore deleted events
+      tags:
+      - Events
+  /api/v1/events/unfavourite/{eventId}:
+    patch:
+      description: Removes an event from the user's favourites based on the provided
+        event ID.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Event marked as favourite successfully
+          schema:
+            $ref: '#/definitions/response.Response'
+        "400":
+          description: BadRequest - Invalid request data
+          schema:
+            $ref: '#/definitions/response.Response'
+        "401":
+          description: Unauthorized - User not authenticated
+          schema:
+            $ref: '#/definitions/response.Response'
+        "403":
+          description: Forbidden - User does not have the required permissions
+          schema:
+            $ref: '#/definitions/response.Response'
+        "404":
+          description: Not Found - Event with the specified ID not found
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error - An error occurred while processing
+            the request
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: UnMark anb event as favorite
+      tags:
+      - Events
   /api/v1/reviews:
     get:
       description: Fetches a paginated list of reviews based on the provided filter
